# vkr

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run.bat  setup.bat  setup.sh
.github/workflows/: ci.yml
SynGT16may/: AddDialog.dcu  AddDialog.dfm  AddDialog.pas  Analyzer.dcu  Analyzer.dfm  Analyzer.pas  Arrow.dcu  Arrow.pas  AutomatDug.pas  ChangeSize.dcu  ChangeSize.dfm  ChangeSize.pas  CharProducer.dcu  CharProducer.pas  Child.dcu  Child.~dfm  Child.~pas  Creator.dcu  Creator.pas  Dictionary.dcu  Dictionary.pas  DrawObject.dcu  DrawObject.pas  DrawPoint.dcu  DrawPoint.pas  DugaAutomat.dcu  DugaAutomat.pas  DugaAutomat.~pas  ErrorUnit.dcu  ErrorUnit.pas  ErrorsMar08.txt  Left_example.grw  MAIN.dcu  MAIN.dfm  MAIN.~PAS  Minimization.dcu  Minimization.pas  Minimization.~pas  Parser.dcu  Parser.pas  (+72 more)
SynGT16may/debug/: min-table-DECIMAL_FRACTION.txt  min-table-PROGRAM.txt  min-table-T.txt  table-DECIMAL_NUMBER.txt  table-DIGIT.txt  table-EXPRESSION.txt  table-F.txt  table-S.txt  table-UNSIGNED_INTEGER.txt
SynGT16may/tests/: GTST.GRM  test1.grw  test2.grw
SynGT16may/tests/debug/: table-S.txt
docs/: doc_changes.py  doc_guide.py  Изменения_и_тесты_SynGT.docx  Руководство_пользователя_SynGT.docx
examples/: CMakeLists.txt
examples/grammars/: CALC.GRM  LANG.GRM  syngt.ini  test.grm  test1_simple_ll1.grm  test2_left_recursion.grm  test2_result.grm  test3_common_prefix.grm  test3_result.grm  test4_complex.grm  test5_expr_ll1.grm  test6_minimal.grm  test_edge.grm  test_edge_result.grm  test_empty.grm  test_gedit.txt  test_right.grm  test_right_result.grm  test_simple.grm  test_useless.grm  testa.grm
examples/grammars/Or/: test_and_inside_or.grm  test_or_deep_nesting.grm  test_or_inside_and.grm  test_or_nested.grm  test_or_simple.grm
examples/grammars/basic/: hello.grm  identifier.grm  list.grm  optional.grm
examples/grammars/gedit/: calc.grw  left_recursion.grw  list.grw  statements.grw
examples/grammars/real/: c_mini.grm  calc.grm  pascal_mini.grm
examples/grammars/recursion/: left_expr.grm  left_multiple.grm  left_simple.grm  right_list.grm  right_multiple.grm  right_simple.grm
examples/grammars/semantics/: assign_sem.grm  mixed_sem.grm
examples/grammars/verify/: test_analyze_recursion.grm  test_extract_substitute.grm  test_general_recursion.grm  test_left_recursion.grm  test_macros.grm  test_right_recursion.grm  test_semantics.grm
examples/usage/: example_parse.cpp  example_transform.cpp
libsyngt/: CMakeLists.txt
libsyngt/include/syngt/analysis/: DFAToREGEX.h  Minimization.h  Minimize.h  ParsingTable.h  RecursionAnalyzer.h
libsyngt/include/syngt/codegen/: ParserGenerator.h
libsyngt/include/syngt/core/: Grammar.h  MacroList.h  NTListItem.h  NonTerminalList.h  SemanticList.h  TerminalList.h  Types.h
libsyngt/include/syngt/graphics/: Arrow.h  DrawObject.h  DrawPoint.h  GraphicsConstants.h  Ward.h
libsyngt/include/syngt/parser/: CharProducer.h  Parser.h  Parser2.h
libsyngt/include/syngt/regex/: REAnd.h  REBinaryOp.h  REIteration.h  RELeaf.h  REMacro.h  RENonTerminal.h  REOr.h  RESemantic.h  RETerminal.h  RETree.h
libsyngt/include/syngt/transform/: FirstFollow.h  LeftElimination.h  LeftFactorization.h  Regularize.h  RemoveUseless.h  RightElimination.h
libsyngt/include/syngt/utils/: Creator.h  Dictionary.h  ErrorMessages.h  Semantic.h  UndoRedo.h
libsyngt/src/analysis/: DFAToREGEX.cpp  Minimization.cpp  Minimize.cpp  ParsingTable.cpp  RecursionAnalyzer.cpp
libsyngt/src/codegen/: ParserGenerator.cpp
libsyngt/src/core/: Grammar.cpp  MacroList.cpp  NTListItem.cpp  NonTerminalList.cpp  SemanticList.cpp  TerminalList.cpp
libsyngt/src/graphics/: Arrow.cpp  DrawObject.cpp  DrawPoint.cpp
libsyngt/src/parser/: Parser.cpp  Parser2.cpp
libsyngt/src/regex/: REBinaryOp.cpp  REDrawing.cpp  REIteration.cpp  RELeaf.cpp  RENonTerminal.cpp  RESemantic.cpp  RETerminal.cpp
libsyngt/src/transform/: FirstFollow.cpp  LeftElimination.cpp  LeftFactorization.cpp  Regularize.cpp  RemoveUseless.cpp  RightElimination.cpp
libsyngt/src/utils/: Creator.cpp  Semantic.cpp  UndoRedo.cpp
scripts/: build.bat  build.sh  clean.bat  clean.sh  run.bat  run.sh
syngt_cli/: CMakeLists.txt  main.cpp
syngt_gui/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/analysis/: test_Minimize.cpp  test_ParsingTable.cpp  test_RecursionAnalyzer.cpp
tests/codegen/: test_ParserGenerator.cpp
tests/core/: test_Grammar.cpp  test_GrammarTransformations.cpp  test_Lists.cpp  test_Macros.cpp  test_NTListItem.cpp
tests/graphics/: test_Arrow.cpp  test_DrawObject.cpp  test_DrawPoint.cpp
tests/integration/: test_GrammarPersistence.cpp  test_LoadGrammar.cpp
tests/parser/: test_CharProducer.cpp  test_Integration.cpp  test_Parser.cpp  test_ParserEdgeCases.cpp
tests/regex/: test_REOperations.cpp  test_RETree.cpp
tests/transform/: test_FirstFollow.cpp  test_LeftElimination.cpp  test_LeftFactorization.cpp  test_Regularize.cpp  test_RemoveUseless.cpp  test_RightElimination.cpp
tests/utils/: test_Creator.cpp  test_Semantic.cpp  test_UndoRedo.cpp
